fixed footer spacing

--- a/assets/css/index-style.css
+++ b/assets/css/index-style.css
@@ -80,7 +80,7 @@ a {
 	list-style-type: none;
 	/*float:left;*/
 	display: inline-block;
-	padding:15px 10px;
+	padding:15px 20px;
 	font-size: 12px;
 }
 
